[package]
name = "iHODL"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }

solana-client = { version = "1.18.26", default-features = false }
solana-sdk = "1.18.26"
solana-program = "1.18.26"

spl-token = "4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bs58 = "0.5"
dotenvy = "0.15"
once_cell = "1.21"

log = "0.4"
env_logger = "0.10"

teloxide = { version = "0.13", default-features = false, features = ["macros"] }
